# glpi_dashboard

./: .coverage  .cz.toml  .editorconfig  .env.example  .eslintrc.json  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .replit  .secrets.baseline  AI_ASSISTANT_GUIDE.md  AI_DEVELOPMENT_RULES.md  AI_PROJECT_CONTEXT.md  AI_QUICK_REFERENCE.md  ARCHITECTURE.md  AUDITORIA_ANOMALIAS_REPORT.md  BRANCHING_STRATEGY.md  CHANGELOG.md  CI_CD_CONFIG.md  CI_README.md  COMITE_GOVERNANCA_DASHBOARD.md  CONTRIBUTING.md  DEBUGGING_LOG.md  DEBUG_GUIDE.md  DEPENDENCIES.md  DIAGNOSTICO_COMPLETO.md  DIAGNOSTICO_ERROS_MONITORAMENTO.md  DOCUMENTACAO_SUBSTITUICAO_FRONTEND.md  DOCUMENTATION_INDEX.md  ENHANCED_FEATURES_DOCUMENTATION.md  ENVIRONMENT_CONFIG.md  GUIA_CONFIGURACAO_MCPS.md  IMPLEMENTACAO_COMPLETA.md  Makefile  OTIMIZACOES_IMPLEMENTADAS.md  PLANO_CORRECAO_PROBLEMAS.md  PLANO_IMPLEMENTACAO_COMITE.md  (+176 more)
.github/: dependabot.yml  pull_request_template.md
.trae/: __init__.py
.zap/: rules.tsv
TEMP_INFO/: tree.after.txt  tree.before.txt  versions.txt
ai_context_storage/: context_items.json
alerts/: alert_20250814.json
artifacts/: backend_data_20250812_134306.json  backend_data_20250812_134614.json  data__api_alerts_20250815_001302.json  data__api_metrics_20250815_001302.json  data__api_metrics_20250815_001348.json  data__api_metrics_20250815_001430.json  data__api_metrics_20250815_001603.json  data__api_metrics_simple_20250815_001603.json  data__api_technicians_ranking_20250815_001430.json  lighthouse-baseline.json  metrics_sample_20250812_134306.json  metrics_sample_20250812_134614.json  performance-optimization-report.md  system_validation_20250814_161134.json  system_validation_20250814_163608.json  system_validation_20250814_164638.json  system_validation_20250814_165841.json  system_validation_20250814_222014.json  system_validation_20250814_222951.json  system_validation_20250814_223638.json  system_validation_20250814_224206.json  validation_report_20250812_134306.json  validation_report_20250812_134614.json  validation_report_20250815_001137.json  validation_report_20250815_001302.json  validation_report_20250815_001348.json  validation_report_20250815_001430.json  validation_report_20250815_001603.json
attached_assets/: Pasted-Prompt-Transformar-HTML-est-tico-em-componentes-React-Vite-markdown-Copiar-Editar-Identidade--1754267521018_1754267521019.txt  index_1754098247871_1754269130850.html
backend/: .coverage  .coveragerc  .coveragerc_observability  .coveragerc_temp  .env.example  DATA_QUALITY_README.md  DIAGNOSTICO_GLPI_FINAL.md  DUPLICIDADE_ANALISE.md  Makefile  RELATORIO_CORRECOES.md  RELATORIO_EVIDENCIAS_TECNICOS_GLPI.txt  VALIDACAO_CONSISTENCIA.md  __init__.py  app.py  assignment_based_technician_solution.py  audit_dashboard_metrics.py  build.ps1  build.sh  cache_test_routes.py  check_groups_only.py  debug_all_technicians_groups.py  debug_correct_profiles.py  debug_dashboard_hierarchy.py  debug_discover_field.py  debug_field_complete.py  debug_field_discovery.py  debug_field_discovery_fixed.py  debug_glpi.py  debug_glpi_api.py  debug_glpi_fixed.py  debug_glpi_service.py  debug_groups_verification.py  debug_level_metrics.py  debug_method_specific.py  debug_n1_n4_missing.py  debug_profiles.py  debug_ranking_direct.py  debug_ranking_especifico.py  debug_ranking_levels_detailed.py  debug_string_comparison.py  (+62 more)
changes/: change_20250814_213933_be86d3bb.json
config/: bandit.yaml  openapi.json  settings.py  sonar-project.properties
docker/: README.md
docs/: ANTI_REGRESSION.md  CI_README.md  CI_SETUP.md  CONFIGURACAO_MOCK_DATA.md  DEPENDENCY_MAP.md  E2E_COVERAGE_GUIDE.md  ESTRUTURA_PROJETO.md  GUIA_TREINAMENTO_EQUIPE.md  METODOLOGIA_REVISAO_CICLOS.md  PERFORMANCE_DEVELOPMENT_GUIDE.md  PERFORMANCE_SYSTEM.md  PLANO_LIMPEZA_ORGANIZACAO.md  QUALITY_GATES_CI.md  README-E2E-VALIDATOR.md  RECOVERY_LOG.md  RELATORIO_CORRECOES_FINAIS.md  RELATORIO_LIMPEZA_ORGANIZACAO.md  SECURITY.md  TROUBLESHOOTING_METRICS.md  quality-dashboard.html
frontend/: .env.example  .eslintrc.cjs  .eslintrc.json  App.tsx  DEBUGGING_GUIDE.md  DESIGN_SYSTEM.md  FILTRO_DATA_IMPLEMENTACAO.md  README-E2E-ANTI-ZERO.md  RELATORIO-FINAL-ANTI-ZERO.md  RELATORIO_VALIDACAO_FINAL.md  build.ps1  build.sh  components.json  debug_api.js  debug_dashboard.js  index.html  jest.config.js  orval.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tailwind.config.js  test-results.json  test_dashboard.html  test_mock.html  tsconfig.build.json  tsconfig.json  validate-anti-zero.cjs  validation_script.ps1  vite.config.ts  vitest.config.integration.ts  vitest.config.ts  vitest.config.unit.ts
frontend_old_backup/: vite.config.ts
gadpi-robust-stack/: .pre-commit-config.yaml  Makefile  README.md
monitoring/: README.md  alertmanager.yml  prometheus.yml
nginx/: nginx.conf
reports/: dry-run.patch  inventory.json  relocation-plan.md  reorganization-execution-plan.md  root-scripts-analysis.md  structure-optimization-plan.md  structure-sweep.md
scripts/: README.md  README_categoria_glpi.md  category_usage_report.py  category_usage_report_7days.json  dashboard-e2e-validator-updated.js  dashboard-e2e-validator.js  discover_category_field.py  install-redis-windows.ps1  monitor-quality.ps1  reorganize_structure.py  run-dashboard-e2e-validation.ps1  run-dashboard-e2e-validation.sh  security_audit.py  security_check.py  setup-environment.ps1  setup_dev_environment.py  setup_monitoring.py  start-preview.ps1  start-preview.sh  stop-preview.ps1  stop-preview.sh  test_category_mapping.py  test_validation_all_zero.py  trae_ai_integration_validator.py  update_docs.py  validate-quality-gates.ps1  validate-quality-gates.sh  validate_dashboard.py  validate_env_vars.py
services/: api_service.py
src/: App.tsx  vite.config.ts
temp_files/: check_frontend_console.js  clear_all_caches.py  (+13 more)
tools/glpi_mapping/: README.md  __init__.py  cli.py  crontab  mapper.py  pyproject.toml  test_example.py  test_simple.py
tools/glpi_mapping/test_output/: groups.csv  groups.json
(+894 files in other folders)
