[project]
name = "glpi-dashboard"
version = "1.0.0"
description = "Dashboard para análise de tickets e técnicos do GLPI"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-caching>=2.1.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.0",
    "requests>=2.32.4",
    "redis>=5.0.0",
    "hiredis>=2.3.0",
]
